// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect.checkable uncheck remove by selector not treeCheckStrictly 1`] = `
<div>
  <div
    class="rc-tree-select rc-tree-select-multiple rc-tree-select-open rc-tree-select-show-search"
  >
    <div
      class="rc-tree-select-selector"
    >
      <div
        class="rc-tree-select-selection-overflow"
      >
        <div
          class="rc-tree-select-selection-overflow-item"
          style="opacity: 1;"
        >
          <span
            class="rc-tree-select-selection-item"
            title="0"
          >
            <span
              class="rc-tree-select-selection-item-content"
            >
              0
            </span>
            <span
              aria-hidden="true"
              class="rc-tree-select-selection-item-remove"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                class="rc-tree-select-selection-item-remove-icon"
              >
                ×
              </span>
            </span>
          </span>
        </div>
        <div
          class="rc-tree-select-selection-overflow-item"
          style="opacity: 1;"
        >
          <span
            class="rc-tree-select-selection-item"
            title="0-0"
          >
            <span
              class="rc-tree-select-selection-item-content"
            >
              0-0
            </span>
            <span
              aria-hidden="true"
              class="rc-tree-select-selection-item-remove"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                class="rc-tree-select-selection-item-remove-icon"
              >
                ×
              </span>
            </span>
          </span>
        </div>
        <div
          class="rc-tree-select-selection-overflow-item"
          style="opacity: 1;"
        >
          <span
            class="rc-tree-select-selection-item"
            title="0-0-0"
          >
            <span
              class="rc-tree-select-selection-item-content"
            >
              0-0-0
            </span>
            <span
              aria-hidden="true"
              class="rc-tree-select-selection-item-remove"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                class="rc-tree-select-selection-item-remove-icon"
              >
                ×
              </span>
            </span>
          </span>
        </div>
        <div
          class="rc-tree-select-selection-overflow-item rc-tree-select-selection-overflow-item-suffix"
          style="opacity: 1;"
        >
          <div
            class="rc-tree-select-selection-search"
            style="width: 0px;"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-label="Search"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="rc-tree-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              role="combobox"
              style=""
              type="search"
              value=""
            />
            <span
              aria-hidden="true"
              class="rc-tree-select-selection-search-mirror"
            >
               
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-tree-select-dropdown rc-tree-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div>
        <div>
          <div
            class="rc-tree-select-tree"
            role="tree"
          >
            <div>
              <input
                aria-label="for screen reader"
                disabled=""
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="rc-tree-select-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
            >
              <div
                class="rc-tree-select-tree-indent"
              >
                <div
                  class="rc-tree-select-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="rc-tree-select-tree-list"
              style="height: 200px;"
            >
              <div>
                <div
                  class="rc-tree-select-tree-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    aria-grabbed="false"
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked rc-tree-select-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    />
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                      title="0"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked rc-tree-select-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    >
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                      title="0-0"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0-0
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked rc-tree-select-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    >
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                      />
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="0-0-0"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0-0-0
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect.checkable uncheck remove by selector not treeCheckStrictly 2`] = `
<div>
  <div
    class="rc-tree-select rc-tree-select-multiple rc-tree-select-open rc-tree-select-show-search"
  >
    <div
      class="rc-tree-select-selector"
    >
      <div
        class="rc-tree-select-selection-overflow"
      >
        <div
          class="rc-tree-select-selection-overflow-item rc-tree-select-selection-overflow-item-suffix"
          style="opacity: 1;"
        >
          <div
            class="rc-tree-select-selection-search"
            style="width: 0px;"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-label="Search"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="rc-tree-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              role="combobox"
              style=""
              type="search"
              value=""
            />
            <span
              aria-hidden="true"
              class="rc-tree-select-selection-search-mirror"
            >
               
            </span>
          </div>
        </div>
      </div>
      <span
        class="rc-tree-select-selection-placeholder"
      />
    </div>
    <div
      class="rc-tree-select-dropdown rc-tree-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div>
        <div>
          <div
            class="rc-tree-select-tree"
            role="tree"
          >
            <div>
              <input
                aria-label="for screen reader"
                disabled=""
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="rc-tree-select-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
            >
              <div
                class="rc-tree-select-tree-indent"
              >
                <div
                  class="rc-tree-select-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="rc-tree-select-tree-list"
              style="height: 200px;"
            >
              <div>
                <div
                  class="rc-tree-select-tree-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    aria-grabbed="false"
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    />
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                      title="0"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    >
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                      title="0-0"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0-0
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    >
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                      />
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="0-0-0"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0-0-0
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect.checkable uncheck remove by tree check 1`] = `
<div>
  <div
    class="rc-tree-select rc-tree-select-multiple rc-tree-select-open rc-tree-select-show-search"
  >
    <div
      class="rc-tree-select-selector"
    >
      <div
        class="rc-tree-select-selection-overflow"
      >
        <div
          class="rc-tree-select-selection-overflow-item"
          style="opacity: 1;"
        >
          <span
            class="rc-tree-select-selection-item"
            title="0"
          >
            <span
              class="rc-tree-select-selection-item-content"
            >
              0
            </span>
            <span
              aria-hidden="true"
              class="rc-tree-select-selection-item-remove"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                class="rc-tree-select-selection-item-remove-icon"
              >
                ×
              </span>
            </span>
          </span>
        </div>
        <div
          class="rc-tree-select-selection-overflow-item"
          style="opacity: 1;"
        >
          <span
            class="rc-tree-select-selection-item"
            title="0-0"
          >
            <span
              class="rc-tree-select-selection-item-content"
            >
              0-0
            </span>
            <span
              aria-hidden="true"
              class="rc-tree-select-selection-item-remove"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                class="rc-tree-select-selection-item-remove-icon"
              >
                ×
              </span>
            </span>
          </span>
        </div>
        <div
          class="rc-tree-select-selection-overflow-item"
          style="opacity: 1;"
        >
          <span
            class="rc-tree-select-selection-item"
            title="0-0-0"
          >
            <span
              class="rc-tree-select-selection-item-content"
            >
              0-0-0
            </span>
            <span
              aria-hidden="true"
              class="rc-tree-select-selection-item-remove"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                class="rc-tree-select-selection-item-remove-icon"
              >
                ×
              </span>
            </span>
          </span>
        </div>
        <div
          class="rc-tree-select-selection-overflow-item rc-tree-select-selection-overflow-item-suffix"
          style="opacity: 1;"
        >
          <div
            class="rc-tree-select-selection-search"
            style="width: 0px;"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-label="Search"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="rc-tree-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              role="combobox"
              style=""
              type="search"
              value="0"
            />
            <span
              aria-hidden="true"
              class="rc-tree-select-selection-search-mirror"
            >
              0 
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-tree-select-dropdown rc-tree-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div>
        <div>
          <div
            class="rc-tree-select-tree"
            role="tree"
          >
            <div>
              <input
                aria-label="for screen reader"
                disabled=""
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="rc-tree-select-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
            >
              <div
                class="rc-tree-select-tree-indent"
              >
                <div
                  class="rc-tree-select-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="rc-tree-select-tree-list"
              style="height: 200px;"
            >
              <div>
                <div
                  class="rc-tree-select-tree-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    aria-grabbed="false"
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked rc-tree-select-tree-treenode-leaf-last filter-node"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    />
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                      title="0"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked rc-tree-select-tree-treenode-leaf-last filter-node"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    >
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                      title="0-0"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0-0
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-checkbox-checked rc-tree-select-tree-treenode-leaf-last filter-node"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    >
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                      />
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox rc-tree-select-tree-checkbox-checked"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="0-0-0"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0-0-0
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect.checkable uncheck remove by tree check 2`] = `
<div>
  <div
    class="rc-tree-select rc-tree-select-multiple rc-tree-select-open rc-tree-select-show-search"
  >
    <div
      class="rc-tree-select-selector"
    >
      <div
        class="rc-tree-select-selection-overflow"
      >
        <div
          class="rc-tree-select-selection-overflow-item rc-tree-select-selection-overflow-item-suffix"
          style="opacity: 1;"
        >
          <div
            class="rc-tree-select-selection-search"
            style="width: 0px;"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-label="Search"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="rc-tree-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              role="combobox"
              style=""
              type="search"
              value="0"
            />
            <span
              aria-hidden="true"
              class="rc-tree-select-selection-search-mirror"
            >
              0 
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-tree-select-dropdown rc-tree-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div>
        <div>
          <div
            class="rc-tree-select-tree"
            role="tree"
          >
            <div>
              <input
                aria-label="for screen reader"
                disabled=""
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="rc-tree-select-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
            >
              <div
                class="rc-tree-select-tree-indent"
              >
                <div
                  class="rc-tree-select-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="rc-tree-select-tree-list"
              style="height: 200px;"
            >
              <div>
                <div
                  class="rc-tree-select-tree-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    aria-grabbed="false"
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-leaf-last filter-node"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    />
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                      title="0"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-leaf-last filter-node"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    >
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                      title="0-0"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0-0
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-leaf-last filter-node"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    >
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                      />
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-checkbox"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="0-0-0"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0-0-0
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
